--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <th>الفرض الثالت</th>
         <th>الفرض الرابع</th>
         <th>الأنشطة المندمجة</th>
+        <th>مجموع النقط</th>
         <th>المعامل</th>
       </tr>
       <tr>
@@ -27,8 +28,8 @@
         <td class="note-2"><input type="number" /></td>
         <td class="note-3"><input type="number" /></td>
         <td class="note-4"><input type="number" /></td>
-
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -41,6 +42,7 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -50,9 +52,10 @@
         <td class="note-1"><input type="number" /></td>
         <td class="note-2"><input type="number" /></td>
         <td class="note-3"><input type="number" /></td>
-        <td class="note-4"><input type="number" /></td>
+        <td class="note-4"><input type="number" v /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -65,18 +68,20 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
       </tr>
       <tr>
         <td>الرياضيات</td>
-        <td class="note-1"><input type="number" ></td>
+        <td class="note-1"><input type="number"></td>
         <td class="note-2"><input type="number" /></td>
         <td class="note-3"><input type="number" /></td>
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -89,6 +94,7 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -101,6 +107,7 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -113,6 +120,7 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -125,6 +133,7 @@
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
@@ -132,11 +141,12 @@
       <tr>
         <td>علوم الحياة والأرض</td>
         <td class="note-1"><input type="number" /></td>
-        <td class="note-2"><input type="number"  /></td>
+        <td class="note-2"><input type="number" /></td>
         <td class="note-3"><input type="number" /></td>
         <td class="note-4"><input type="number" /></td>
 
         <td class="note-5"><input type="number" /></td>
+        <td class="total"></td>
         <td class="lab">
           <div><input class="lab-inpt" type="number" /></div>
         </td>
